Adding google tag

--- a/stocks-crafting-vue/public/index.html
+++ b/stocks-crafting-vue/public/index.html
@@ -32,6 +32,8 @@
     <link rel="icon" href="/docs/4.5/assets/img/favicons/favicon.ico">
     <meta name="msapplication-config" content="/docs/4.5/assets/img/favicons/browserconfig.xml">
     <meta name="theme-color" content="#563d7c" >
+    <meta name="google-site-verification" content="pM9gMaf7PzoxWalqP06Y53outSp_DdJLn55PF-HOUjM" />
+
 
     <style>
       
@@ -39,7 +41,7 @@
     </style>
 
 
-
+  </head>
 
   <body>
     
