--- a/stocks-crafting-vue/public/index.html
+++ b/stocks-crafting-vue/public/index.html
@@ -34,7 +34,7 @@
     <meta name="theme-color" content="#563d7c" >
     <meta name="google-site-verification" content="pM9gMaf7PzoxWalqP06Y53outSp_DdJLn55PF-HOUjM" />
 
-
+    <script data-ad-client="ca-pub-4623835467383899" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <style>
       
       
